fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/Internal_Cross_Reference__c.object-meta.xml
<CustomObject>
    <label>Internal Cross Reference</label>
    <nameField>
        <displayFormat>iXref-{0000000}</displayFormat>
        <label>Internal Cross Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Cross References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>