fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/fields/Cross_Reference_Product__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross-Reference Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Internal Cross References (Cross-Reference Product)</relationshipLabel>
    <relationshipName>Internal_Cross_References1</relationshipName>
    <type>Lookup</type>
</CustomField>