fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/fields/Eaches_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Eaches_Per_Case__c</fullName>
    <formula>Text(Cross_Reference_Product__r.Each_per_Case__c)</formula>
    <label>Eaches Per Case</label>
    <type>Text</type>
</CustomField>