fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/fields/Percent_Match__c.field-meta.xml
<CustomField>
    <fullName>Percent_Match__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Percent Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>