fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Internal Cross References</relationshipLabel>
    <relationshipName>Internal_Cross_References</relationshipName>
    <type>Lookup</type>
</CustomField>