fullSandbox11072023/force-app/main/default/objects/Internal_Cross_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Cross_Reference_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>